Fixed display of menu buttons on mobile

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,6 +3,12 @@
 }
 
 .resume input {
+    font-family: 'Lato', sans-serif;
+    font-size: 1em;
+    color: var(--primary-text-colour);
+    background-color: var(--background-colour);
+    border-color: var(--theme-colour);
+    border-style: groove;
     width: 90%;
 }
 
