--- a/src/css/index.css
+++ b/src/css/index.css
@@ -77,15 +77,6 @@ h6 {
   font-weight: 400;
 }
 
-input {
-  font-family: 'Lato', sans-serif;
-  font-size: 1em;
-  color: var(--primary-text-colour);
-  background-color: var(--background-colour);
-  border-color: var(--theme-colour);
-  border-style: groove;
-}
-
 .inline {
   display: inline;
 }
